force-app/main/default/objects/ResidentialLoanApplication/fields/ConsumerDutyFairValueStatement__c.field-meta.xml
<CustomField>
    <fullName>ConsumerDutyFairValueStatement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures whether or not the consumer fair duty fair value statement has been assessed.
Used in Opportunity | Mortgage | Process Controller flow.</description>
    <inlineHelpText>Have you assessed the consumer duty fair value statement?</inlineHelpText>
    <label>Consumer duty fair value statement</label>
    <type>Checkbox</type>
</CustomField>