force-app/main/default/objects/ResidentialLoanApplication/fields/DebtConsolidationMortgage__c.field-meta.xml
<CustomField>
    <fullName>DebtConsolidationMortgage__c</fullName>
    <description>Captures whether this is a debt consolidation mortgage. Used to flag higher risk mortgages for compliance review. Set manually by the mortgage adviser.</description>
    <label>Debt consolidation mortgage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>