force-app/main/default/objects/ResidentialLoanApplication/fields/HaveAnyLendersBeenDiscounted__c.field-meta.xml
<CustomField>
    <fullName>HaveAnyLendersBeenDiscounted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Opportunity | Mortgage | Process Controller flow to check whether any lenders have been discounted due to consumer duty fair value assessment.</description>
    <inlineHelpText>Have any lenders been discounted on this basis?</inlineHelpText>
    <label>Have any lenders been discounted?</label>
    <type>Checkbox</type>
</CustomField>