force-app/main/default/objects/ResidentialLoanApplication/fields/LendersDiscountedWhy__c.field-meta.xml
<CustomField>
    <fullName>LendersDiscountedWhy__c</fullName>
    <description>Used in Opportunity | Mortgage | Process Controller flow if lenders have been discounted, user can provide reasons why here.</description>
    <label>Why have those lenders been discounted?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>