force-app/main/default/objects/ResidentialLoanApplication/fields/LendingIntoRetirement__c.field-meta.xml
<CustomField>
    <fullName>LendingIntoRetirement__c</fullName>
    <description>Captures whether we are lending to a customer into their retirement. Used to flag higher risk mortgages for compliance review. Set manually by the mortgage adviser.</description>
    <label>Lending into retirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>