force-app/main/default/objects/ResidentialLoanApplication/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>Used to store the margin percentage for Tracker &amp; Discount mortgage rate types</description>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>