force-app/main/default/objects/ResidentialLoanApplication/fields/MortgageOpportunityProcessStage__c.field-meta.xml
<CustomField>
    <fullName>MortgageOpportunityProcessStage__c</fullName>
    <description>Stores the mortgage stage the opportunity reached with this application as the primary application.
Is only populated if application is changed mid-process.</description>
    <label>Mortgage Opportunity Process Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>