force-app/main/default/objects/ResidentialLoanApplication/fields/OW_date_mortgage_application_submitted__c.field-meta.xml
<CustomField>
    <fullName>OW_date_mortgage_application_submitted__c</fullName>
    <label>Date mortgage application submitted</label>
    <type>Date</type>
</CustomField>