force-app/main/default/objects/ResidentialLoanApplication/fields/OW_date_of_offer__c.field-meta.xml
<CustomField>
    <fullName>OW_date_of_offer__c</fullName>
    <label>Date of offer</label>
    <type>Date</type>
</CustomField>