force-app/main/default/objects/ResidentialLoanApplication/fields/OW_lender_fees__c.field-meta.xml
<CustomField>
    <fullName>OW_lender_fees__c</fullName>
    <label>Lender fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>