force-app/main/default/objects/ResidentialLoanApplication/fields/OW_monthly_repayment_amount__c.field-meta.xml
<CustomField>
    <fullName>OW_monthly_repayment_amount__c</fullName>
    <label>Monthly repayment amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>