force-app/main/default/objects/ResidentialLoanApplication/fields/OW_solicitor__c.field-meta.xml
<CustomField>
    <fullName>OW_solicitor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Solicitor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Loan Applications</relationshipLabel>
    <relationshipName>Residential_Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>