force-app/main/default/objects/ResidentialLoanApplication/fields/ResidentialInterestOnly__c.field-meta.xml
<CustomField>
    <fullName>ResidentialInterestOnly__c</fullName>
    <description>Captures whether this is both a residential and interest only mortgage. Used to flag higher risk mortgages for compliance review. Set manually by the mortgage adviser.</description>
    <label>Residential interest only</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>