force-app/main/default/objects/ResidentialLoanApplication/validationRules/OW_application_date_not_future.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_application_date_not_future</fullName>
    <active>true</active>
    <description>Ensures that the date the mortgage application submitted is not in the future.</description>
    <errorConditionFormula>OW_date_mortgage_application_submitted__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>OW_date_mortgage_application_submitted__c</errorDisplayField>
    <errorMessage>Date cannot be in the future</errorMessage>
</ValidationRule>