force-app/main/default/objects/ResidentialLoanApplication/validationRules/OW_application_date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_application_date_required</fullName>
    <active>true</active>
    <description>Ensures that a  mortgage application date is recorded at the application status or later.</description>
    <errorConditionFormula>ISPICKVAL( Status, &quot;Offered&quot; )
&amp;&amp; 

ISBLANK( OW_date_mortgage_application_submitted__c  )</errorConditionFormula>
    <errorDisplayField>OW_date_mortgage_application_submitted__c</errorDisplayField>
    <errorMessage>Please record the date the mortgage application was submitted.</errorMessage>
</ValidationRule>