force-app/main/default/objects/ResidentialLoanApplication/validationRules/OW_closed_reason_required.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_closed_reason_required</fullName>
    <active>true</active>
    <description>Ensures that a closed reason is recorded if the mortgage application is closed.</description>
    <errorConditionFormula>ISPICKVAL( Status, &quot;Closed&quot; )

&amp;&amp; 

ISBLANK( TEXT(  OW_closed_reason__c ) )</errorConditionFormula>
    <errorDisplayField>OW_closed_reason__c</errorDisplayField>
    <errorMessage>A closed reason must be recorded if the status is closed.</errorMessage>
</ValidationRule>