force-app/main/default/objects/ResidentialLoanApplication/validationRules/OW_completion_required_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_completion_required_fields</fullName>
    <active>true</active>
    <description>Ensures that an offer date is recorded at the point the mortgage application is in the offered stage.</description>
    <errorConditionFormula>ISPICKVAL( Status, &quot;Complete&quot; )
&amp;&amp; 
(ISBLANK( OW_date_of_completion__c ) ||
ISBLANK( OW_mortgage_amount__c ) ||
ISBLANK( OW_monthly_repayment_amount__c ) ||
ISBLANK( InterestRate ) ||
ISBLANK( OW_fixed_rate_expires__c ) ||
ISBLANK( OW_fixed_rate_term__c ) ||
ISBLANK( OW_lender_fees__c ) ||
ISBLANK( OW_lender__c ) ||
ISBLANK( AmortizationTerm ) ||
ISBLANK( OW_date_mortgage_application_submitted__c ) ||
ISBLANK(  OW_date_of_offer__c  ))</errorConditionFormula>
    <errorMessage>All fields in the mortgage information and key dates sections must be populated to move a mortgage to complete.</errorMessage>
</ValidationRule>