force-app/main/default/objects/ResidentialLoanApplication/validationRules/OW_offer_date_not_future.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_offer_date_not_future</fullName>
    <active>true</active>
    <description>Ensures that the date of offer is not in the future.</description>
    <errorConditionFormula>OW_date_of_offer__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>OW_date_of_offer__c</errorDisplayField>
    <errorMessage>Date of offer cannot be in the future</errorMessage>
</ValidationRule>