force-app/main/default/objects/ResidentialLoanApplication/validationRules/OW_offer_date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_offer_date_required</fullName>
    <active>true</active>
    <description>Ensures that an offer date is recorded at the point the mortgage application is in the offered stage.</description>
    <errorConditionFormula>ISPICKVAL( Status, &quot;Offered&quot; )

&amp;&amp; 

ISBLANK( OW_date_of_offer__c )</errorConditionFormula>
    <errorDisplayField>OW_date_of_offer__c</errorDisplayField>
    <errorMessage>The date of offer must be recorded if the status is offered.</errorMessage>
</ValidationRule>